--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ body {
   width: 80%;
 }
 
+.header {
+  padding-top: 10px;
+}
+
 .home{
   height: 450px;
   background-image: url(../imagens/img-fundo.jpg);
